# seestr

./: Cargo.toml  README.md
fuzz/: Cargo.toml  main.rs
src/: lib.rs
tests/: self-referential.rs
